Fixed issue with changes to the HTML not showing in the Designer

--- a/src/RentalWorksWeb/theme/rentalworks.css
+++ b/src/RentalWorksWeb/theme/rentalworks.css
@@ -600,7 +600,7 @@ html.theme-material [data-name="AuditHistoryGrid"] tbody tr.selected td ul:not(.
 #reportDesigner table tr[data-row="header"] td {background:#fff;border: 2px solid #cee5f3;cursor:pointer;font-size:.9em;font-weight: 600;height:2em;position:relative;box-sizing:border-box;padding:0;-webkit-touch-callout:none;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;}
 #reportDesigner table tr[data-row="detail"] td {background:#edf7ff;border: 2px solid #cee5f3;cursor:default;font-size:.9em;font-weight: 600;height:2em;position:relative;box-sizing:border-box;padding:0;-webkit-touch-callout:none;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;}
 #reportDesigner table tr[data-row="detail"] td.hover-cell { box-shadow: 0 5px 9px 0 rgba(0, 0, 0, 0.2);margin: 5px; }
-#reportDesigner table tr[data-row="footer"] td {background:#fff;border: 2px solid #cee5f3;cursor:default; height:2em;position:relative;box-sizing:border-box;padding:0;-webkit-touch-callout:none;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none; }
+#reportDesigner table tr[data-row="footer"] td {background:#fff;border: 2px solid #cee5f3;cursor:default; font-size:.9em;height:2em;position:relative;box-sizing:border-box;padding:0;-webkit-touch-callout:none;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none; }
 #reportDesigner table tr[data-row="footer"] td.total-name {cursor:pointer;}
 #reportDesigner table tr[data-row="sub-header"] th {background:#cfecfe;border: 2px solid #abdfff;font-size:.9em;height:2em;position:relative;box-sizing:border-box;padding:0;-webkit-touch-callout:none;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;}
 #reportDesigner table tr[data-row="sub-header"] th.hover-cell { box-shadow: 0 5px 9px 0 rgba(0, 0, 0, 0.2);margin: 5px; }
